# xq

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .eslintrc.yml  .gitignore  .tool-versions  CMakeLists.txt  LICENSE  Makefile  README.md  codecov.yml  mix.exs  package.json  rollup.config.ts  tsconfig.json
.circleci/: config.yml
apps/xq/: .gitignore  mix.exs
apps/xq/test/: test_helper.exs
apps/xq_web/: README.md  mix.exs
cmake/modules/: FindErlang.cmake
cmd/xqdb_scraper/: index.js  openings.json  package.json
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
docker/: Dockerfile  Dockerfile.fairy-stockfish  docker-compose.dev.yml
scripts/: cmake.bash  conan.sh  docker-compose.bash  setup.bash  start.sh
xq_app/: .eslintrc.yml  .prettierrc.yml  package.json  rollup.config.ts  tsconfig.json
xq_app/.storybook/: main.ts
xq_app/src/: App.svelte  Board.svelte  main.ts
xq_app/src/components/: Board.svelte  Piece.svelte
xq_app/src/pages/: index.svelte
xq_app/src/services/: UserSettings.svelte  index.ts
xq_app/src/utils/: channel.ts  channels.ts  dimensions.ts  enum.ts  game.ts  pagination.ts  store.svelte  xq.ts
xq_app/src/views/: Demo.svelte
xq_app/svelte/: App.svelte  Counter.svelte  main.ts
xq_portal/: .credo.exs  .gitignore  README.md  mix.exs
xq_portal/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  releases.exs  test.exs
xq_portal/lib/: xq.ex  xq_native.ex
xq_portal/lib/xq/: analysis.ex  application.ex  generator.ex  parser.ex  release.ex  (+1 more)
xq_portal/xq/: README.md
xq_portal/xq_web/: .gitignore
(+121 files in other folders)
